tests/NormalTests/paczka1/small_fuzzy/87517812.err
Error in line 1: 3cpxPjZ A276 79,7
Error in line 2: 9Px A276 26,7
Error in line 11: QwN A276 1,3
